fix submit button spacing

--- a/public/h/4/static/css/style.css
+++ b/public/h/4/static/css/style.css
@@ -38,7 +38,7 @@ input {height: 1.44rem;}
 }
 input[type='number'] {width: 3rem;}
 .submit-row {
-    margin-right: 1rem;
+    margin-top: 1rem;
     display: flex;
     justify-content: flex-end;
     align-items: baseline;
